--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: python
 python:
-  - "3.3"
-  - "2.7"
-  - "2.6"
+  - "3.4"
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 #install: PLEASE CHANGE ME
 # command to run tests, e.g. python setup.py test
-script: python3 -m cog.xUnit.VhdlFileHandlerUnittest
+script: python -m unittest discover
