Overarching test for Cog

--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,11 @@
 [tox]
 envlist = py34
+
 [testenv]
 commands=python -m unittest discover
+
+[testenv:coverage]
+deps = coverage
+commands = 
+	coverage run --branch -m unittest discover
+	coverage report -m 
