--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,5 @@ python:
 # command to install dependencies, e.g. pip install -r requirements.txt --use-mirrors
 #install: PLEASE CHANGE ME
 # command to run tests, e.g. python setup.py test
-script: python -m unittest discover
+#script: python -m unittest discover
+script: tox
