--- a/tb/test1/SConstruct
+++ b/tb/test1/SConstruct
@@ -1,52 +1,58 @@
-import pdb
-from cog.src import modelsimCompiler
+'''Testing integrated setup
 
-#def modelsim_builder(target, source, env):
-#    mc = modelsimCompiler('E:\\modeltech_pe_10.4a\\win32pe\\')
-#    params = []
-#    for j in source:
-#        filename = j.rstr()
-#        suffix = filename.split('.')[-1]
-#        if suffix == 'sv':
-#            suffix_id = 3
-#        elif suffix == 'vhdl':
-#            suffix_id = 1
-#        else:
-#            raise Error('Wrong suffix')
-#    	params.append(['work', filename, suffix_id])
-#    mc.compileAllFiles(params)
-#    return None
-#    # mc raises errors if it fails.
-#
-#bld = Builder(action = modelsim_builder,
-#              suffix = '.log',
-#              src_suffix = ['.vhd', '.vhdl', '.sv'])
-#
-#Glob('../../src/*')
-#
-#env = Environment(BUILDERS = {'builder' : bld})
+Copyright (c) 2015 K. Nordstroem <k.nordstroem@helveting.ch>
 
-#env.builder('tb_test1.sv')
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
 
-##########################################################################
-# Testing integrated setup
-# Very nice indeed
-##########################################################################
+The above copyright notice and this permission notice shall be included in
+all copies or substantial portions of the Software.
 
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+
+
+Very nice indeed
+
+Call with
+
+$ scons tb_test1
+
+to build the tb_test1 testbench. This is the default behaviour and
+also works w/o any parameter.
+
+$ scons sim/run
+
+to run the simulation
+
+'''
 import logging
+#import pdb
+
 logging.basicConfig(level=11)
 
-env2 = Environment(
-    tools = ['default', 'cogpy'],
-    TB_ENTITY = 'tb_test1',
-    COMPILE_OPTIONS = ['+cover=sbceft'],
-    SIM_OPTIONS = ['-coverage', '-msgmode', 'both', '-displaymsgmode', 'both'],
-    MODELSIM = 'E:\\modeltech_pe_10.4a\\win32pe',
-    BASEDIR = ['C:\\Users\\kn\\Documents\\workspace\\test1\\tb\\test1\\','C:\\Users\\kn\\Documents\\workspace\\test1\\src'],
-    TB_FILE = 'C:\\Users\\kn\\Documents\\workspace\\test1\\tb\\test1\\tb_test1.sv'
+env = Environment(
+    tools=['default', 'cogpy'],
+    TB_ENTITY='tb_test1',
+    COMPILE_OPTIONS=['+cover=sbceft'],
+    SIM_OPTIONS=['-coverage', '-msgmode', 'both', '-displaymsgmode', 'both'],
+    MODELSIM='E:\\modeltech_pe_10.4a\\win32pe',
+    BASEDIR=['C:\\Users\\kn\\Documents\\workspace\\test1\\tb\\test1\\',
+             'C:\\Users\\kn\\Documents\\workspace\\test1\\src'],
+    TB_FILE='C:\\Users\\kn\\Documents\\workspace\\test1\\tb\\test1\\tb_test1.sv'
 )
 
-#env2.cogpy_builder(None, 'C:\\Users\\kn\\Documents\\workspace\\test1\\tb\\test1\\tb_test1.sv')
+simrun = env.cogpy_sim('sim/run.do')
+tb = env.cogpy_builder('tb_test1.sv')
 
-Default(env2.cogpy_builder('tb_test1.sv'))
-Default(env2.cogpy_sim('sim/run.do'))
+Default(tb)
+#Default(simrun)
