--- a/tb/test3/SConscript
+++ b/tb/test3/SConscript
@@ -38,6 +38,7 @@ env = Environment(
 
 simrun = env.cogpy_sim('run.do')
 tb = env.cogpy_builder('tb_test3.sv')
+env.Clean('tb_test3.sv', 'work')
 
 Default(tb)
 #Default(simrun)
