--- a/tb/test4/SConscript
+++ b/tb/test4/SConscript
@@ -38,6 +38,8 @@ env = Environment(
 
 simrun = env.cogpy_sim('run.do')
 tb = env.cogpy_builder('tb_test4.vhd')
+# Add all user-generated libs
+env.Clean('tb_test4', 'work')
 
 Default(tb)
 #Default(simrun)
