--- a/tb/test3/SConscript
+++ b/tb/test3/SConscript
@@ -25,13 +25,14 @@ import logging
 import os
 
 DS = os.path.sep
+Import('MODELSIM_GLOBAL')
 
 env = Environment(
     tools=['default', 'cogpy'],
     TB_ENTITY='tb_test3',
     COMPILE_OPTIONS=['+cover=sbceft'],
     SIM_OPTIONS=['-coverage', '-msgmode', 'both', '-displaymsgmode', 'both'],
-    MODELSIM='E:\\modeltech_pe_10.4a\\win32pe',
+    MODELSIM=MODELSIM_GLOBAL,
     BASEDIR=[os.path.abspath('.'), os.path.abspath('..'+DS+'..'+DS+'..'+DS+'src')],
     TB_FILE='tb_test3.sv'
 )
