PyLint almost totally happy.

--- a/pylint.cfg
+++ b/pylint.cfg
@@ -2,8 +2,9 @@
 # Use multiple processes to speed up Pylint.
 jobs=4
 
-[REPORTS]
+[FORMAT]
+max-line-length=110
 
-# C0111: method-docstring; trust uncle Bob to name methods concisely
-disable=C0111,E1604,W1632,W1616,E1605,E1608,W1613,W1630,W1625,W1622,I0020,W1604,E1606,W1609,W1639,W1605,E1607,W1612,W1635,W1615,W1620,W1640,W1606,W1618,W1614,I0021,W1628,W1603,W1601,W1629,W1611,E1602,W1607,W1624,W1636,W1623,W1638,W1610,W1626,W1621,W1602,W1617,E1601,W1608,W1619,E1603,W1634,W1637,W0704,W1633,W1627
+[MESSAGES CONTROL]
+disable=missing-docstring
 
