--- a/tox.ini
+++ b/tox.ini
@@ -7,6 +7,6 @@ commands=python -m unittest discover
 [testenv:coverage]
 deps = coverage
 commands = 
-	- coverage run --branch -m unittest discover
-	- coverage report -m 
-	- coverage html
+	coverage run --branch -m unittest discover
+	coverage report -m 
+	coverage html
